codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__skill_popup_preserves_normal_target_after_ambiguous_probe.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› deploy (plugin)  [Skill] Example skill used in tests.                                             "
"                                                                                                    "
"  enter insert · esc close                                                                          "
"                                                                                                    "
"› $1x  $plugin:d                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
