codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__skill_popup_targets_colon_qualified_mention_left_of_adjacent_skill.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› $google-calendar:availability$unbound-skill                                                       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  availability (google-cale...  [Skill] Find availability and plan event changes.                   "
"                                                                                                    "
"  Press enter to insert or esc to close                                                             "
