codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_root@windows.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› /                                                         "
"                                                            "
"  /help                  show slash command help            "
"  /model                 choose what model and reasoning    "
"                         effort to use                      "
"  /permissions           choose what Codex is allowed to do "
"  /sandbox-add-read-dir  let sandbox read a directory: /    "
